spade-tests/src/snapshots/spade_tests__typeinference__reading_from_tuple_members_is_an_error.snap
---
source: spade-tests/src/typeinference.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Attempt to use tuple indexing on non-tuple
  ┌─ testinput:8:28
  │
8 │     let x = inst read_port(val#0);
  │                            ^^^ expected tuple
  │
  = Expected: tuple
  =      Got: &mut (bool, int<3>)


